--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,7 @@ html,
 body {
   @apply h-full overflow-hidden;
 }
+
+.text-gradient {
+  @apply bg-gradient-to-br from-primary-500 to-tertiary-500 bg-clip-text text-transparent;
+}
